syntax = "proto3";

package query;

service Query {
  rpc priceLookUp (PriceRequest) returns (PriceResponse) {}
  rpc findProduct (LocationRequest) returns (LocationResponse) {}
  rpc allergyInfo (AllergyRequest) returns (stream AllergyResponse) {}
  rpc contactSupport (stream ChatMessage) returns (stream ChatMessage) {}
}

message PriceRequest {
  string name = 1;
}

message PriceResponse {
  string priceMsg = 1;
}

message LocationRequest{
  string name = 1;
}

message LocationResponse{
  string location = 1;
}

message AllergyRequest{
  string allergy = 1;
}

message AllergyResponse{
  string allergy = 1;
  string products = 2;
}

message ChatMessage{
  string name = 1;
  string message = 2;
}
